# CSLPS

./: README.md  Resultados.txt  Resultados.xlsx
Project1/: Player.cpp  Player.h  Project1.pro  Project1_pt_PT.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mthread.cpp  mthread.h  myrunnable.cpp  myrunnable.h  mythread.cpp  mythread.h  video.cpp  video.h
Project2/: CMakeLists.txt
Project2/header/: BitInputStream.h  BitOutputStream.h
Project2/source/: BitInputStream.cpp  BitOutputStream.cpp  main.cpp
Project3/: CMakeLists.txt
Project3/header/: Golomb.h
Project3/source/: BitInputStream.cpp  BitOutputStream.cpp  Golomb.cpp  main.cpp
header/: BitOutputStream.h  Converter.h  Predictor.h  YUV422Converter.h  YUV444Converter.h
project4/: CMakeLists.txt
project4/header/: Format.h  Golomb.h  Predictor.h
project4/source/: Golomb.cpp  Predictor.cpp  main.cpp
projeto5/: CMakeLists.txt
projeto5/header/: BGRConverter.h  BitInputStream.h  Format.h  Golomb.h  Predictor.h  YUV420Converter.h
projeto5/source/: Golomb.cpp  Predictor.cpp  main.cpp
source/: BitInputStream.cpp  Predictor.cpp  main.cpp
